--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@reduxjs/toolkit": "^1.8.0",
     "next": "latest",
     "react": "^17.0.2",
